versions/v2.9/modules/en/pages/faq/general-faq.adoc
= General FAQ
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: faq/general-faq.adoc 
:product-path: faq/general-faq.adoc
ifeval::["{build-type}" != "community"]
:xref-istio: xref:observability/istio/istio.adoc
:xref-manage-clusters: xref:cluster-admin/manage-clusters/manage-clusters.adoc
:xref-rancher-on-aks: xref:installation-and-upgrade/hosted-kubernetes/rancher-on-aks.adoc
:xref-use-windows-clusters: xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-istio: xref:integrations-in-rancher/istio/istio.adoc
:xref-manage-clusters: xref:how-to-guides/new-user-guides/manage-clusters/manage-clusters.adoc
:xref-rancher-on-aks: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rancher-on-aks.adoc
:xref-use-windows-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/use-windows-clusters.adoc
endif::[]

This FAQ is a work in progress designed to answer the questions most frequently asked about Rancher v2.x.

See the xref:faq/technical-items.adoc[Technical FAQ] for frequently asked technical questions.

== Is it possible to manage Azure Kubernetes Services with Rancher v2.x?

Yes. See our {xref-manage-clusters}[Cluster Administration] guide for what Rancher features are available on AKS, as well as our {xref-rancher-on-aks}[documentation on AKS].

== Does Rancher support Windows?

Yes. Rancher supports Windows Server 1809 containers. For details on how to set up a cluster with Windows worker nodes, refer to the section on {xref-use-windows-clusters}[configuring custom clusters for Windows.]

== Does Rancher support Istio?

Yes. Rancher supports {xref-istio}[Istio].

== Will Rancher v2.x support Hashicorp's Vault for storing secrets?

Secrets management is on our roadmap but we haven't assigned it to a specific release yet.

== Does Rancher v2.x support RKT containers as well?

At this time, we only support Docker.

== Does Rancher v2.x support Calico, Contiv, Contrail, Flannel, Weave net, etc., for embedded and registered Kubernetes?

Out-of-the-box, Rancher provides the following CNI network providers for Kubernetes clusters: Canal, Flannel, Calico and Weave.  Always refer to the https://rancher.com/support-maintenance-terms/[Rancher Support Matrix] for details about what is officially supported.

== Are you planning on supporting Traefik for existing setups?

We don't currently plan on providing embedded Traefik support, but we're still exploring load-balancing approaches.

== Can I import OpenShift Kubernetes clusters into v2.x?

Our goal is to run any Kubernetes clusters. Therefore, Rancher v2.x should work with OpenShift, but we haven't tested it yet.

== Is {longhorn-product-name} integrated with Rancher?

Yes. Longhorn is integrated with Rancher v2.5 and later.
